correct spacing of view/edit buttons

--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -181,19 +181,21 @@ $instagram-red: #f04752;
 .detailButton-container {
   display: flex;
   flex-direction: column;
+  // justify-content: left;
+  align-items: center;
+  background-color: $instagram-white;
   // background-color: orange;
-  width: 200px;
-  // background-color: $instagram-white;
+  // width: 200px;
+
   // margin: 10px;
-  // padding: 10px;
-  // border-width: 1px;
-  // border-style: solid;
-  // border-color: $instagram-light-grey;
+  border-width: 1px;
+  border-style: solid;
+  border-color: $instagram-light-grey;
 }
 
 .userPhoto {
   height: 200px;
-  margin: 0px 20px 0px 20px;
+  margin: 0px 0px 0px 0px;
     cursor:pointer;
 }
 
@@ -203,7 +205,7 @@ $instagram-red: #f04752;
   // background-color: red;
   color: black;
   // color: $instagram-grey;
-  background-color: $instagram-white;
+  // background-color: $instagram-white;
   height: 25px;
   transition: background-color 0.5s ease;
   font-weight: 300;
